--- a/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
@@ -41,6 +41,76 @@ Radxa X4 是 x86 开发版，处理器是英特尔 N100。全文基于 Radxa X4 
 # make install clean
 ```
 
+## 查看实时状态（内存，网速，硬盘读写等）
+
+`systat -vmstat 1` 每秒刷新一次：
+
+```sh
+root@ykla:~ # systat -vmstat 1
+    2 users    Load  2.01  3.28  3.42                  Mar  9 12:26:41
+   Mem usage:  91%Phy 52%Kmem                           VN PAGER   SWAP PAGER
+Mem:      REAL           VIRTUAL                        in   out     in   out
+       Tot   Share     Tot    Share     Free   count
+Act   432M  10400K   4610G   15868K    1373M   pages
+All   434M  12244K   4610G   87652K                       ioflt  Interrupts
+Proc:                                                     cow    3273 total
+  r   p   d    s   w   Csw  Trp  Sys  Int  Sof  Flt   663 zfod        sdhci_pci0
+  1           41        4K  684  138   2K       663       ozfod  1030 cpu0:timer
+                                                         %ozfod   204 cpu1:timer
+ 0.2%Sys   0.2%Intr 25.3%User  0.0%Nice 74.3%Idle         daefr     3 cpu2:timer
+|    |    |    |    |    |    |    |    |    |    |       prcfr     9 cpu3:timer
+>>>>>>>>>>>>>                                             totfr  2022 xhci1 129
+                                           dtbuf          react       igc0:rxq0
+Namei     Name-cache   Dir-cache    345474 maxvn          pdwak     3 igc0:rxq1
+   Calls    hits   %    hits   %    252374 numvn      249 pdpgs       igc0:rxq2
+       3       3 100                176597 frevn          intrn     2 igc0:rxq3
+                                                    8298M wire        igc0:aq
+Disks mmcsd mmcsd mmcsd  nda0 pass0                  581M act         nvme0:admi
+KB/t   0.00  0.00  0.00  0.00  0.00                 5380M inact       nvme0:io0
+tps       0     0     0     0     0                  548K laund       nvme0:io1
+MB/s   0.00  0.00  0.00  0.00  0.00                 1373M free        nvme0:io2
+%busy     0     0     0     0     0                   57K buf         nvme0:io3
+                                                                      hdac0 140
+
+```
+
+## CPU 温度
+
+### 读取 CPU 温度：
+
+```sh
+root@ykla:/home/ykla # kldload coretemp # 英特尔加载 coretemp，AMD 请使用 amdtemp
+root@ykla:/home/ykla # sysctl -a | grep temperature
+hw.acpi.thermal.tz0.temperature: 27.9C # 这个值不代表 CPU 温度，一般是主板温度
+dev.cpu.3.temperature: 41.0C
+dev.cpu.2.temperature: 40.0C
+dev.cpu.1.temperature: 40.0C
+dev.cpu.0.temperature: 40.0C
+```
+
+```sh
+root@ykla:/home/ykla # sysctl dev.cpu | grep temperature
+dev.cpu.3.temperature: 30.0C
+dev.cpu.2.temperature: 30.0C
+dev.cpu.1.temperature: 29.0C
+dev.cpu.0.temperature: 30.0C
+```
+
+疑问：为什么温度不一样？
+
+### 持久化温度设定
+
+为便于 htop 等软件使用，编辑 `/boot/loader.conf` 写入：
+
+```sh
+coretemp_load="YES"
+```
+
+### 参考文献
+
+- [coretemp](https://man.freebsd.org/cgi/man.cgi?coretemp)，官方 man 手册，英特尔看这个
+- [amdtemp](https://man.freebsd.org/cgi/man.cgi?amdtemp)，官方 man 手册，AMD 看这个
+- [FreeBSD find CPU (processor) temperature command](https://www.cyberciti.biz/faq/freebsd-determine-processor-cpu-temperature-command/)，读取 CPU 温度
 ## Radxa X4 FreeBSD 15.0 dmesg
 
 安装上述驱动后，查看启动详情：
@@ -238,41 +308,3 @@ ubt0 on uhub0
 ubt0: <Realtek Bluetooth Radio, class 224/1, rev 1.00/0.00, addr 1> on usbus1
 Security policy loaded: MAC/ntpd (mac_ntpd)
 ```
-
-## CPU 温度
-
-### 读取 CPU 温度：
-
-```sh
-root@ykla:/home/ykla # kldload coretemp # 英特尔加载 coretemp，AMD 请使用 amdtemp
-root@ykla:/home/ykla # sysctl -a | grep temperature
-hw.acpi.thermal.tz0.temperature: 27.9C # 这个值不代表 CPU 温度，一般是主板温度
-dev.cpu.3.temperature: 41.0C
-dev.cpu.2.temperature: 40.0C
-dev.cpu.1.temperature: 40.0C
-dev.cpu.0.temperature: 40.0C
-```
-
-```sh
-root@ykla:/home/ykla # sysctl dev.cpu | grep temperature
-dev.cpu.3.temperature: 30.0C
-dev.cpu.2.temperature: 30.0C
-dev.cpu.1.temperature: 29.0C
-dev.cpu.0.temperature: 30.0C
-```
-
-疑问：为什么温度不一样？
-
-### 持久化温度设定
-
-为便于 htop 等软件使用，编辑 `/boot/loader.conf` 写入：
-
-```sh
-coretemp_load="YES"
-```
-
-### 参考文献
-
-- [coretemp](https://man.freebsd.org/cgi/man.cgi?coretemp)，官方 man 手册，英特尔看这个
-- [amdtemp](https://man.freebsd.org/cgi/man.cgi?amdtemp)，官方 man 手册，AMD 看这个
-- [FreeBSD find CPU (processor) temperature command](https://www.cyberciti.biz/faq/freebsd-determine-processor-cpu-temperature-command/)，读取 CPU 温度
