--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.4-jie-cc++-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.4-jie-cc++-huan-jing-de-pei-zhi.md
@@ -149,7 +149,50 @@ export CXX=clang++15
 
 注意，以下操作在 sh/bash/zsh 中使用，csh/tcsh 请作相应改动
 
-### clang-format 代码美化
+### 代码美化
+
+vim-clang-format 四年未更新对新的 clang-format 支持有问题（clang-format15 版本正常,clang-format17和clang-format19不正常），所以推荐使用 vim-codefmt。
+
+#### vim-codefmt 代码美化
+
+`~/.vimrc` 中加入：
+
+```
+ Plug 'google/vim-maktaba'
+ Plug 'google/vim-codefmt'
+ Plug 'google/vim-glaive'
+```
+
+同时在 `~/.vimrc` 中设置如下：
+
+```
+call glaive#Install()
+
+Glaive codefmt clang_format_executable="/usr/local/bin/clang-format19"
+Glaive codefmt clang_format_style="{BasedOnStyle: LLVM, IndentWidth: 4}"
+
+augroup autoformat_settings
+  autocmd FileType c,cpp AutoFormatBuffer clang-format
+  autocmd InsertLeave *.h,*.hpp,*.c,*.cpp :FormatCode
+augroup END
+```
+
+第一句 Glaive 语句设置用于设置 clang-format 执行文件路径。
+
+第二句 Glaive 语句设置格式化的风格样式。也可以设为`"file"`或`"file:<format_file_path>"`。参考[格式](https://clang.llvm.org/docs/ClangFormatStyleOptions.html)
+
+第一句 autocmd 设置在文件为类型是 c/cpp 时启用 vim-codefmt 的 AutoFormatBuffer clang-format。
+
+第二句 autocmd 设置在文件后缀为 `.h, .hpp, .c, .cpp` 时，退出插入模式后执行 `:FormatCode` 命令。
+
+保存 `~/.vimrc` 后
+
+```sh
+:PlugInstall
+```
+现在可以在退出插入模式后自动进行格式化，也可以手动在 vim 中执行 `:FormatCode` 命令进行格式化
+
+#### vim-clang-format 代码美化
 
 clang-format 代码美化需安装 vim-clang-format 插件，方法如下
 
