--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.4-jie-cc++-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.4-jie-cc++-huan-jing-de-pei-zhi.md
@@ -151,7 +151,7 @@ export CXX=clang++15
 
 ### 代码美化
 
-vim-clang-format 四年未更新对新的 clang-format 支持有问题（clang-format15 版本正常,clang-format17和clang-format19不正常），所以推荐使用 vim-codefmt。
+vim-clang-format 四年未更新。故，对新的 clang-format 支持有问题（clang-format15 版本正常，clang-format17 和 clang-format19 不正常），所以推荐使用 vim-codefmt。
 
 #### vim-codefmt 代码美化
 
@@ -194,7 +194,7 @@ augroup END
 
 #### vim-clang-format 代码美化
 
-clang-format 代码美化需安装 vim-clang-format 插件，方法如下
+clang-format 代码美化需安装插件 vim-clang-format，方法如下
 
 `~/.vimrc` 中加入
 
@@ -219,7 +219,7 @@ let g:clang_format#auto_format_on_insert_leave=1
 
 安装插件后可以使用
 
-如
+如：
 
 ![](../.gitbook/assets/ccenv4.png)
 
