--- a/di-24-zhang-freebsd-te-se/di-24.1-jie-bsd-init-guan-li-fu-wu.md
+++ b/di-24-zhang-freebsd-te-se/di-24.1-jie-bsd-init-guan-li-fu-wu.md
@@ -9,6 +9,12 @@ FreeBSD 使用传统的 BSD init 管理系统服务。
 - 重启服务：`# service xxx restart`
 - 添加服务并开机自启：`service xxx enable`
 - 禁用开机启动：`service xxx disable`
+- 删除启动项：`service xxx delete`
+
+>**注意**
+>
+>关键字 `enable`、`disable`、`delete` 最早出现在 13.0，参见 [Add new rc keywords: enable, disable, delete](https://reviews.freebsd.org/D17113)
+
 
 系统服务在安装以后默认是禁用状态，以上命令无法执行，需要先开启服务：
 
