逐步淘汰 sysrc 写法

--- a/di-21-zhang-linux-jian-rong-ceng/di-21.10-jie-rocky9-jian-rong-ceng.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.10-jie-rocky9-jian-rong-ceng.md
@@ -34,7 +34,7 @@ Rocky Linux release 9.4 (Blue Onyx)
 配置服务：
 
 ```sh
-# sysrc dbus_enable="YES" #一般桌面已经配置
+# service dbus enable #一般桌面已经配置
 # service dbus start #一般桌面已经配置
 # dbus-uuidgen > /compat/linux/etc/machine-id
 ```
