--- a/di-21-zhang-linux-jian-rong-ceng/di-21.2-jie-linux-jian-rong-ceng-ji-yu-centos-yuan-sheng.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.2-jie-linux-jian-rong-ceng-ji-yu-centos-yuan-sheng.md
@@ -12,7 +12,7 @@
 # kldload linux64
 # service linux start
 # pkg install emulators/linux-c7 dbus
-# sysrc dbus_enable="YES" #一般桌面已经配置
+# service dbus enable #一般桌面已经配置
 # service dbus start #一般桌面已经配置
 # dbus-uuidgen > /compat/linux/etc/machine-id
 # reboot
