--- a/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
@@ -19,7 +19,7 @@
 # sysrc kld_list+="linux linux64"
 # kldload linux64
 # service linux start
-# sysrc dbus_enable="YES" #一般桌面已经配置
+# service dbus enable #一般桌面已经配置
 # service dbus start #一般桌面已经配置
 ```
 
