--- a/di-24-zhang-freebsd-te-se/di-24.1-jie-bsd-init-guan-li-fu-wu.md
+++ b/di-24-zhang-freebsd-te-se/di-24.1-jie-bsd-init-guan-li-fu-wu.md
@@ -8,41 +8,45 @@ FreeBSD 使用传统的 BSD init 管理系统服务。
 - 停止服务：`# service xxx stop`
 - 重启服务：`# service xxx restart`
 - 添加服务并开机自启：`service xxx enable`
-- 禁用开机启动：`service xxx disable`
-- 删除启动项：`service xxx delete`
+- 禁用开机启动：`# service xxx disable`
+- 删除启动项：`# service xxx delete`
 
 >**注意**
 >
 >关键字 `enable`、`disable`、`delete` 最早出现在 13.0，参见 [Add new rc keywords: enable, disable, delete](https://reviews.freebsd.org/D17113)
 
 
-系统服务在安装以后默认是禁用状态，以上命令无法执行，需要先开启服务：
+系统服务在安装以后默认是未开启状态，以上命令无法执行，需要先开启服务：
 
 ```sh
 # ee /etc/rc.conf
 ```
 
-添加一行，`XXX_enable="YES"`，`XXX` 表示服务名称（这里只是举例，实际上可以是 nginx samba 等），这是固定格式：
+添加一行，`XXX_enable="YES"`，`XXX` 表示服务名称（这里只是举例，实际上可以是 `nginx`、`samba` 等），这是固定格式：
 
 ```sh
 XXX_enable="YES"
 ```
 
-也可以用命令添加：
+- 也可以用命令添加：
 
 ```sh
 # sysrc xxx_enable="YES"
 ```
 
+或
+
 ```sh
 # service xxx enable
 ```
 
-或者禁用：
+- 用命令禁用服务：
 
 ```sh
 # sysrc xxx_enable="NO"
 ```
+
+或
 
 ```sh
 # service xxx disable
@@ -51,7 +55,7 @@ XXX_enable="YES"
 >**提示**
 >
 >```sh
->sysrc XXX_enable="YES"
+># sysrc XXX_enable="YES"
 >```
 >
 >上述命令 `"YES"`，中的 `""`（两个英文双引号）其实没用，不加也能执行，系统会自动加上（FreeBSD 15.0 如此）。`"NO"` 亦如此。
@@ -71,7 +75,7 @@ XXX_enable="YES"
 
 ## 进阶
 
-rc.conf 管理着所有系统服务。与之相关的文件和路径如下：
+`rc.conf` 管理着所有系统服务。与之相关的文件和路径如下：
 
 1. 默认的配置位于 `/etc/defaults/rc.conf`。**这个是用来看的，不是用来改的，基本每项都有详细注释说明用途。** 改请改 `/etc/rc.conf`。
 2. 用户自定义的配置位于 `/etc/rc.conf`。例如，如果想让系统自动启动 ssh、ipfw、nginx 等服务，就要修改该文件。**注意，`/etc/rc.conf` 的优先级高于 `/etc/defaults/rc.conf`；即 `/etc/rc.conf` 会覆盖 `/etc/defaults/rc.conf`。**
@@ -100,27 +104,42 @@ root@ykla:~ #
 比如
 
 ```
-root@ykla:~ # sysrc fsck_y_enable="YES" #开机自动 fsck
+root@ykla:~ # sysrc fsck_y_enable="YES" # 开机自动 fsck
 fsck_y_enable: NO -> YES
-root@ykla:~ # sysrc background_fsck=NO #强制在控制台输出 fsck 信息
+root@ykla:~ # sysrc background_fsck=NO # 强制在控制台输出 fsck 信息
 background_fsck: YES -> NO
 ```
 
 
-## periodic.conf
+## `periodic.conf`
 
 FreeBSD 默认有一些周期性执行的任务，它们是通过 `periodic` 命令执行的，由 `cron` 自动调用。与 `periodic` 有关的配置和路径如下：
 
-1. 默认的配置位于 `/etc/defaults/periodic.conf`。
-2. 用户自定义的配置位于 `/etc/periodic.conf`。
-3. 基系统的任务脚本位于 `/etc/periodic/`。
-4. 第三方应用的任务脚本位于 `/usr/local/etc/periodic/`。
+- 默认的配置位于 `/etc/defaults/periodic.conf`。
+- 用户自定义的配置位于 `/etc/periodic.conf`。
+- 基本系统的任务脚本位于 `/etc/periodic/`。
+- 第三方应用的任务脚本位于 `/usr/local/etc/periodic/`。
 
 以 `locate` 命令的所依赖的路径数据库 `/var/db/locate.database` 为例，
 
 该数据库由脚本 `/etc/periodic/weekly/310.locate` 每周更新一次。
 
-如果你要立即更新，也可以直接执行这个脚本。
+如果你要立即更新，也可以直接执行这个脚本：
+
+```sh
+root@ykla:~ # locate locate.database # 试图寻找 locate.database
+locate: the locate database '/var/db/locate.database' does not exist.
+
+To create a new database, please run the following command as root:
+
+  /etc/periodic/weekly/310.locate
+root@ykla:~ # /etc/periodic/weekly/310.locate  # 发现没有，提示刷新数据库看看
+
+Rebuilding locate database:
+root@ykla:~ # locate locate.database # 再次找找，找到了
+/var/db/locate.database
+```
+
 
 ## 其他配置文件
 
