--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -5,3 +5,20 @@
 >若非特别强调，则全文的 Linux 使用 Ubuntu 24.04 LTS。FreeBSD 为 FreeBSD 15.0。
 
 为了便于比较，FreeBSD 配置了 pkgbase。
+
+## 命令行命令概述
+
+大部分命令行命令都应是有意义的，例如 `ls` 即 `list`（列出来）；罕有一些见名不知意的命令，比如 `fuck` 命令（可自动纠正拼写错误的命令）。
+
+```sh
+# 命令 选项  参数1       参数2
+# ls   -l   /home/ykla /tmp
+```
+
+现在，大部分命令均应遵从上面的方式（有所省略）。这是 [POSIX.1-2024](https://pubs.opengroup.org/onlinepubs/9799919799/) 规范所规定的。
+
+我们需要注意英文和中文是不同的，中文不使用空格进行分割，而英文必须使用空格以示分别。故，命令行的每个部分中间应该有空格，即 ` `。空格的数量一般不受限制，但最少应该为一个，即 ` `。
+
+
+## 复制命令 `cp`
+
