--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -8,6 +8,8 @@
 
 ## 命令行命令概述
 
+### 命令行格式
+
 大部分命令行命令都应是有意义的，例如 `ls` 即 `list`（列出来）；罕有一些见名不知意的命令，比如 `fuck` 命令（可自动纠正拼写错误的命令）。
 
 ```sh
@@ -20,6 +22,28 @@
 我们需要注意英文和中文是不同的，中文不使用空格进行分割，而英文必须使用空格以示分别。故，命令行的每个部分中间应该有空格，即 ` `。空格的数量一般不受限制，但最少应该为一个，即 ` `。
 
 我们还需要知道，命令是不具有自动纠错功能的，哪怕只是打错了一个字母，少了一个数字，命令也绝不会执行成功。
+
+### 命令的执行与中断
+
+与 Windows 以及图形化界面的软件不同，绝大部分命令行程序在执行中是不会有任何进度提示的。通常只有以下两个结果：
+
+- 成功执行：
+
+```sh
+root@ykla:~ # cp test /root/mydir/
+root@ykla:~ #
+```
+
+- 执行中断：
+
+```sh
+root@ykla:~ # cp test9 /root/mydir/
+cp: test9: No such file or directory
+```
+
+执行中断有很多可能的情形，以上只是其中一种（指定的文件或目录不存在）。
+
+可以看到，只有当执行中断时，命令行才会有提示；若执行完毕，是不会有任何提示的。
 
 ## 复制命令 `cp`
 
