--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -1,16 +1,10 @@
 # 第 11.7 节 命令行基础
 
->**注意**
->
->若非特别强调，则全文的 Linux 使用 Ubuntu 24.04 LTS。FreeBSD 为 FreeBSD 15.0。
-
-为了便于比较，FreeBSD 配置了 pkgbase。
-
 ## 命令行命令概述
 
 ### 命令行格式
 
-大部分命令行命令都应是有意义的，例如 `ls` 即 `list`（列出来）；罕有一些见名不知意的命令，比如 `fuck` 命令（可自动纠正拼写错误的命令）。
+大部分命令行命令都应是有意义的，例如 `ls` 即 `list`（列出来）、`wget` 即通过 web（网络）来 `get`（下载）；罕有一些见名不知意的命令，比如 `fuck` 命令（可自动纠正拼写错误的命令）。
 
 ```sh
 # 命令 选项  参数1       参数2
@@ -20,6 +14,10 @@
 现在，大部分命令均应遵从上面的方式（有所省略）。这是 [POSIX.1-2024](https://pubs.opengroup.org/onlinepubs/9799919799/) 规范所规定的。
 
 我们需要注意英文和中文是不同的，中文不使用空格进行分割，而英文必须使用空格以示分别。故，命令行的每个部分中间应该有空格，即 ` `。空格的数量一般不受限制，但最少应该为一个，即 ` `。
+
+>**思考题**
+>
+>如果不使用空格或某种方式（例如其他符号）对命令行进行分隔，那么软件该如何理解整个句子？比如：`ls-l/home/ykla/tmp`。
 
 我们还需要知道，命令是不具有自动纠错功能的，哪怕只是打错了一个字母，少了一个数字，命令也绝不会执行成功。
 
@@ -43,9 +41,11 @@ cp: test9: No such file or directory
 
 执行中断有很多可能的情形，以上只是其中一种（指定的文件或目录不存在）。
 
-可以看到，只有当执行中断时，命令行才会有提示；若执行完毕，是不会有任何提示的。
+可以看到，只有当执行中断时，命令行才会有提示；若执行完毕，是不会有任何提示的。这种 Unix 设计哲学旨在保证终端输出的简洁性。
 
 ## 复制命令 `cp`
 
 `cp` 即英文复制（copy）的缩写。
+
+
 
