--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -9,6 +9,26 @@
 ```sh
 # 命令 选项  参数1       参数2
 # ls   -l   /home/ykla /tmp
+/home/ykla:
+total 317
+……省略一部分……
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 下载
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 公共
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 图片
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 文档
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 桌面
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 模板
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 视频
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 音乐
+
+/tmp:
+total 6
+drwxrwxrwt  2 root    wheel  3 Mar 18 17:23 .ICE-unix
+-r--r--r--  1 root    wheel 11 Mar 18 17:10 .X0-lock
+-r--r--r--  1 ykla    wheel 11 Mar 18 17:23 .X10-lock
+drwxrwxrwt  2 root    wheel  4 Mar 18 17:23 .X11-unix
+drwxrwxrwt  2 root    wheel  2 Mar 18 17:10 .XIM-unix
+drwxrwxrwt  2 root    wheel  2 Mar 18 17:10 .font-unix
 ```
 
 现在，大部分命令均应遵从上面的方式（有所省略）。这是 [POSIX.1-2024](https://pubs.opengroup.org/onlinepubs/9799919799/) 规范所规定的。
@@ -17,7 +37,16 @@
 
 >**思考题**
 >
->如果不使用空格或某种方式（例如其他符号）对命令行进行分隔，那么软件该如何理解整个句子？比如：`ls-l/home/ykla/tmp`。
+>如果不使用空格或某种方式（例如其他符号）对命令行进行分隔，那么软件该如何理解整个句子？比如：`ls-l/home/ykla/tmp`、`ls/`：
+>
+>```sh
+>root@ykla:~ # ls-l/home/ykla/tmp
+>-sh: ls-l/home/ykla/tmp: not found
+>root@ykla:~ # ls/
+>-sh: ls/: not found
+>```
+>
+>可以看到，shell 会将整个句子当成一个可执行的命令去执行。
 
 我们还需要知道，命令是不具有自动纠错功能的，哪怕只是打错了一个字母，少了一个数字，命令也绝不会执行成功。
 
