--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -72,6 +72,39 @@ cp: test9: No such file or directory
 
 可以看到，只有当执行中断时，命令行才会有提示；若执行完毕，是不会有任何提示的。这种 Unix 设计哲学旨在保证终端输出的简洁性。
 
+### Shell
+
+我们的命令是运行在 shell 中的，通过 shell 与系统进行交互。
+
+FreeBSD 默认的 shell 是 sh。基本符合 [IEEE 1003.1-2024](https://standards.ieee.org/ieee/1003.1/7700/) 中对 shell 的规范。
+
+Linux 中常见的 shell 一般是 bash。MacOS 中的 shell 通常是 zsh。
+
+>**注意**
+>
+>Linux 中也存在 sh，但是一般都是被软链接到了 bash 或其他 shell，她们都不是真正的 sh。
+>
+>```bash
+>$ ls -l /bin/sh
+>lrwxrwxrwx 1 root root 4  2月 25 23:19 /bin/sh -> dash
+>```
+
+#### 快捷键
+
+一般可以用 **Tab** 键补全命令。上箭头 **↑** 是查看上一条命令，下箭头 **↓** 是查看下一条命令。
+
+```sh 
+root@ykla:~ # lo # 若此时按 TAB 键，输出如下。可以再输一个字母再按一次 TAB 键看看
+local                    localedef                login
+local-unbound            locate                   logins
+local-unbound-anchor     lock                     logname
+local-unbound-checkconf  lockf                    look
+local-unbound-control    lockstat                 lorder
+local-unbound-setup      locktest                 lowntfs-3g
+locale
+```
+
+
 ## 复制命令 `cp`
 
 `cp` 即英文复制（copy）的缩写。
