--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -13,19 +13,19 @@ login:
 我们将这个屏幕上呈现的界面称为 TTY（teletypewriter，电传打字机）或物理终端。
 
 解释：
-- `FreeBSD` 是操作系统名称
-- `amd64` 是体系架构
-- `ykla` 是主机名
-- `ttyv0` 是指首个 TTY，你会发现计算机中大部分事物的序列都是以 0 打头的。
-- `login:` 指示用户登录
+- `FreeBSD` 是操作系统名称；
+- `amd64` 是体系架构，一般英特尔和 AMD 处理器都是 amd64，即 X86-64；
+- `ykla` 是主机名，是在安装系统时你自己设置的；
+- `ttyv0` 是指首个 TTY，你会发现计算机中大部分事物的序列都是以 0 打头的；
+- `login:` 指示用户登录。
 
 我们输入用户名和密码，以登录到系统：
 
 ```sh
 FreeBSD/amd64 (ykla) (ttyv0)
 
-login:root # 此处输入用户名
-password: # 此处输入密码
+login:root # 此处输入用户名，然后按回车键
+password: # 此处输入密码，然后按回车键
 Last login: Tue Mar 18 17:24:48 2025 from 3413e8b6b43f
 FreeBSD 15.0-CURRENT (GENERIC) main-n275981-b0375f78e32a
 
@@ -61,9 +61,9 @@ root@ykla:~ #
 
 - [What is TTY in Linux?](https://itsfoss.com/what-is-tty-in-linux/)，翻译在 [Linux 黑话解释：TTY 是什么？](https://linux.cn/article-14093-1.html)。
 
-## 命令行命令概述
 
-### 命令行格式
+
+## 命令行格式
 
 大部分命令行命令都应是有意义的，例如 `ls` 即 `list`（列出来）、`wget` 即通过 web（网络）来 `get`（下载）；罕有一些见名不知意的命令，比如 `fuck` 命令（可自动纠正拼写错误的命令）。
 
@@ -111,7 +111,7 @@ drwxrwxrwt  2 root    wheel  2 Mar 18 17:10 .font-unix
 
 我们还需要知道，命令是不具有自动纠错功能的，哪怕只是打错了一个字母，少了一个数字，命令也绝不会执行成功。
 
-### 命令的执行与中断
+## 命令的执行与中断
 
 与 Windows 以及图形化界面的软件不同，绝大部分命令行程序在执行中是不会有任何进度提示的。通常只有以下两个结果：
 
@@ -133,7 +133,7 @@ cp: test9: No such file or directory
 
 可以看到，只有当执行中断时，命令行才会有提示；若执行完毕，是不会有任何提示的。这种 Unix 设计哲学旨在保证终端输出的简洁性。
 
-### Shell
+## Shell
 
 我们的命令是运行在 shell 中的，通过 shell 与系统进行交互。
 
@@ -150,7 +150,7 @@ Linux 中常见的 shell 一般是 bash。MacOS 中的 shell 通常是 zsh。
 >lrwxrwxrwx 1 root root 4  2月 25 23:19 /bin/sh -> dash
 >```
 
-#### 快捷键
+### 快捷键
 
 一般可以用 **Tab** 键补全命令。上箭头 **↑** 是查看上一条命令，下箭头 **↓** 是查看下一条命令。
 
@@ -164,11 +164,5 @@ local-unbound-control    lockstat                 lorder
 local-unbound-setup      locktest                 lowntfs-3g
 locale
 ```
-
-
-## 复制命令 `cp`
-
-`cp` 即英文复制（copy）的缩写。
-
 
 
