--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -165,4 +165,128 @@ local-unbound-setup      locktest                 lowntfs-3g
 locale
 ```
 
+## 命令的来源
 
+### Linux
+
+在 Linux 中，所有命令基本上都是来自 GNU 软件包的，Linux 内核没有任何命令。我们来验证这一点：
+
+```bash
+ykla@ykla-virtual-machine:~$ dpkg -S /bin/mv 
+coreutils: /bin/mv
+ykla@ykla-virtual-machine:~$ dpkg -S /bin/cp
+coreutils: /bin/cp
+ykla@ykla-virtual-machine:~$ dpkg -S /bin/ls
+coreutils: /bin/ls
+ykla@ykla-virtual-machine:~$ dpkg -S /bin/pwd
+coreutils: /bin/pwd
+ykla@ykla-virtual-machine:~$ dpkg -S /bin/cat
+coreutils: /bin/cat
+ykla@ykla-virtual-machine:~$ dpkg -S /usr/sbin/chroot
+coreutils: /usr/sbin/chroot
+ykla@ykla-virtual-machine:~$ dpkg -S /bin/kill
+procps: /bin/kill
+ykla@ykla-virtual-machine:~$ dpkg -S /usr/bin/free
+procps: /usr/bin/free
+ykla@ykla-virtual-machine:~$ dpkg -S /bin/su
+util-linux: /bin/su
+```
+
+可见在 Linux 中，这些常见命令一般出自 coreutils、util-linux 或 procps。这些软件在历史上是 GNU 计划对 UNIX 软件的再实现。
+
+同时，shell 本身也内置了一些命令：
+
+```bash
+ykla@ykla-virtual-machine:~$ type cd
+cd 是 shell 内建
+```
+
+列出所有 shell 内置的命令：
+
+```bash
+kla@ykla-virtual-machine:~$ compgen -b
+.
+:
+[
+alias
+bg
+bind
+break
+builtin
+caller
+cd
+command
+compgen
+complete
+compopt
+continue
+declare
+dirs
+disown
+echo
+enable
+eval
+exec
+exit
+export
+false
+fc
+fg
+getopts
+hash
+help
+history
+jobs
+kill
+let
+local
+logout
+mapfile
+popd
+printf
+pushd
+pwd
+read
+readarray
+readonly
+return
+set
+shift
+shopt
+source
+suspend
+test
+times
+trap
+true
+type
+typeset
+ulimit
+umask
+unalias
+unset
+wait
+```
+
+### FreeBSD
+
+```sh
+root@ykla:~ # type cd
+cd is a shell builtin
+```
+
+在 FreeBSD 中，除了上述 shell 内置命令外（参见 [sh(1)](https://man.freebsd.org/cgi/man.cgi?sh(1))），常用命令都是基本系统自带的，不属于任何一个包。比如 `ls` 命令，其源代码位于 [freebsd-src/bin/ls/](https://github.com/freebsd/freebsd-src/tree/main/bin/ls)。
+
+如果你配置了 pkgbase，则输出类似：
+
+```sh
+root@ykla:~ # pkg which /bin/ls
+/bin/ls was installed by package FreeBSD-runtime-15.snap20250313173555
+
+```
+
+
+如果缺少了哪个命令，一般可以通过安装相应的软件包来获取，比如 `lspci` 命令，来自软件包 `sysutils/pciutil`。但是也有很多命令存在 Linux 主义问题，不兼容其他操作系统，比如 ip 命令，来自软件包 iproute2。
+
+
+ 
