--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -165,6 +165,49 @@ local-unbound-setup      locktest                 lowntfs-3g
 locale
 ```
 
+若想终止命令，可以用 **ctrl**+**c**：
+
+```sh
+root@ykla:~ # ping 163.com
+PING 163.com (59.111.160.244): 56 data bytes
+64 bytes from 59.111.160.244: icmp_seq=0 ttl=52 time=27.672 ms
+64 bytes from 59.111.160.244: icmp_seq=1 ttl=52 time=27.580 ms
+^C # 注意这里，^C 即代表你在此处按下了 ctrl + c 的组合键，随后命令被终止
+--- 163.com ping statistics ---
+2 packets transmitted, 2 packets received, 0.0% packet loss
+round-trip min/avg/max/stddev = 27.580/27.626/27.672/0.046 ms
+```
+
+**ctrl**+**z**: 把当前进程放到后台，然后用 `fg` 命令可回到前台：
+
+```sh
+root@ykla:~ # ping 163.com
+PING 163.com (59.111.160.244): 56 data bytes
+64 bytes from 59.111.160.244: icmp_seq=0 ttl=52 time=27.611 ms
+64 bytes from 59.111.160.244: icmp_seq=1 ttl=52 time=27.691 ms
+64 bytes from 59.111.160.244: icmp_seq=2 ttl=52 time=27.701 ms
+^Z[1] + Suspended               ping 163.com # 注意此处，按下了 ctrl + z
+root@ykla:~ # fg # 返回前台
+ping 163.com
+64 bytes from 59.111.160.244: icmp_seq=3 ttl=52 time=27.465 ms
+64 bytes from 59.111.160.244: icmp_seq=4 ttl=52 time=27.586 ms
+64 bytes from 59.111.160.244: icmp_seq=5 ttl=52 time=27.522 ms
+^C # 按 crtl + c 结束命令
+--- 163.com ping statistics ---
+6 packets transmitted, 6 packets received, 0.0% packet loss
+round-trip min/avg/max/stddev = 27.465/27.596/27.701/0.085 ms
+```
+
+其他：
+- **ctrl**+**l**（L 的小写）：清空屏幕
+- **ctrl**+**a**： 移动光标到命令行首
+- **ctrl**+**a**: 移动光标到命令行尾
+
+>**注意**
+>
+>上述快捷键不一定非要是小写状态才能执行，大写状态下一样可以执行。
+
+
 ## 命令的来源
 
 ### Linux
