--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -139,7 +139,7 @@ cp: test9: No such file or directory
 
 FreeBSD 默认的 shell 是 sh。基本符合 [IEEE 1003.1-2024](https://standards.ieee.org/ieee/1003.1/7700/) 中对 shell 的规范。
 
-Linux 中常见的 shell 一般是 bash。MacOS 中的 shell 通常是 zsh。
+Linux 中常见的 shell 一般是 bash。而 macOS 中的默认 shell 通常是 zsh。
 
 >**注意**
 >
@@ -318,7 +318,7 @@ root@ykla:~ # type cd
 cd is a shell builtin
 ```
 
-在 FreeBSD 中，除了上述 shell 内置命令外（参见 [sh(1)](https://man.freebsd.org/cgi/man.cgi?sh(1))），常用命令都是基本系统自带的，不属于任何一个包。比如 `ls` 命令，其源代码位于 [freebsd-src/bin/ls/](https://github.com/freebsd/freebsd-src/tree/main/bin/ls)。
+在 FreeBSD 中，除了上述 shell 内置命令外（参见 [sh(1)](https://man.freebsd.org/cgi/man.cgi?sh(1))），常用命令都是基本系统自带的，不属于任何一个包。比如 `ls` 命令，其源代码位于 [freebsd-src/bin/ls/](https://github.com/freebsd/freebsd-src/tree/main/bin/ls)。可见 FreeBSD 系统是一个有机整体。并非由不同人员或团队维护的软件包拼凑而成的。
 
 如果你配置了 pkgbase，则输出类似：
 
@@ -329,7 +329,7 @@ root@ykla:~ # pkg which /bin/ls
 ```
 
 
-如果缺少了哪个命令，一般可以通过安装相应的软件包来获取，比如 `lspci` 命令，来自软件包 `sysutils/pciutil`。但是也有很多命令存在 Linux 主义问题，不兼容其他操作系统，比如 ip 命令，来自软件包 iproute2。
+如果缺少了哪个命令，一般可以通过安装相应的软件包来获取，比如 `lspci` 命令，来自软件包 `sysutils/pciutil`。但是也有很多命令存在 Linux 主义问题，不兼容其他操作系统，比如 ip 命令，来自 GNU 软件包 iproute2。
 
 
  
