--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -235,7 +235,7 @@ ykla@ykla-virtual-machine:~$ dpkg -S /bin/su
 util-linux: /bin/su
 ```
 
-可见在 Linux 中，这些常见命令一般出自 coreutils、util-linux 或 procps。这些软件在历史上是 GNU 计划对 UNIX 软件的再实现。
+可见在 Linux 中，这些常见命令一般出自 GNU 软件 coreutils、util-linux 或 procps。这些软件在历史上是 GNU 计划对 UNIX 软件的再实现。
 
 同时，shell 本身也内置了一些命令：
 
