--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -14,7 +14,7 @@ login:
 
 解释：
 - `FreeBSD` 是操作系统名称；
-- `amd64` 是体系架构，一般英特尔和 AMD 处理器都是 amd64，即 X86-64；
+- `amd64` 是体系架构，一般英特尔和 AMD 处理器都是 amd64，即 x86-64；
 - `ykla` 是主机名，是在安装系统时你自己设置的；
 - `ttyv0` 是指首个 TTY，你会发现计算机中大部分事物的序列都是以 0 打头的；
 - `login:` 指示用户登录。
