--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -111,7 +111,19 @@ drwxrwxrwt  2 root    wheel  2 Mar 18 17:10 .font-unix
 >
 >可以看到，shell 会将整个句子当成一个可执行的命令去执行。
 
-我们还需要知道，命令是不具有自动纠错功能的，哪怕只是打错了一个字母，少了一个数字，命令也绝不会执行成功。
+我们还需要知道，命令是不具有自动纠错功能的，哪怕只是打错了一个字母，少了一个数字，命令也绝不会执行成功：
+
+```sh
+root@ykla:~ # LS # 试试全大写
+-sh: LS: not found
+root@ykla:~ # Ls # 一大一小呢
+-sh: Ls: not found
+root@ykla:~ # ls /hom1 # 实为 /home
+ls: /hom1: No such file or directory
+root@ykla:~ # ls -z /home # 不存在选项 -z
+ls: invalid option -- z
+usage: ls [-ABCFGHILPRSTUWZabcdfghiklmnopqrstuvwxy1,] [--color=when] [-D format] [--group-directories=] [file ...]
+```
 
 ## 命令的执行与中断
 
