--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -261,7 +261,7 @@ cd 是 shell 内建
 列出所有 shell 内置的命令：
 
 ```bash
-kla@ykla-virtual-machine:~$ compgen -b
+ykla@ykla-virtual-machine:~$ compgen -b
 .
 :
 [
