--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -96,11 +96,15 @@ drwxrwxrwt  2 root    wheel  2 Mar 18 17:10 .font-unix
 
 现在，大部分命令均应遵从上面的方式（有所省略）。这是 [POSIX.1-2024](https://pubs.opengroup.org/onlinepubs/9799919799/) 规范所规定的。
 
-我们需要注意英文和中文是不同的，中文不使用空格进行分割，而英文必须使用空格以示分别。故，命令行的每个部分中间应该有空格，即 ` `。空格的数量一般不受限制，但最少应该为一个，即 ` `。
+我们需要注意英文和中文是不同的，中文行文间不使用空格进行分割，而英文单词必须使用空格以示分别。故，命令行的每个部分中间应该有空格，即 ` `。空格的数量一般不受限制，但最少应该为一个，即 ` `。
 
 >**思考题**
 >
->如果不使用空格或某种方式（例如其他符号）对命令行进行分隔，那么软件该如何理解整个句子？比如：`ls-l/home/ykla/tmp`、`ls/`：
+>如果不使用空格或某种方式（例如其他符号）对命令行进行分隔，那么软件该如何理解整个句子？
+>
+>如果不加空格，从自然语言角度，从人类视角看这句话会是怎样的体验？`Whatwelovedeclarespubliclywhoexactlyweare.`？
+>
+>换成：`ls-l/home/ykla/tmp`、`ls/` 呢？
 >
 >```sh
 >root@ykla:~ # ls-l/home/ykla/tmp
