--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -102,7 +102,7 @@ drwxrwxrwt  2 root    wheel  2 Mar 18 17:10 .font-unix
 >
 >如果不使用空格或某种方式（例如其他符号）对命令行进行分隔，那么软件该如何理解整个句子？
 >
->如果不加空格，从自然语言角度，从人类视角看这句话会是怎样的体验？`Whatwelovedeclarespubliclywhoexactlyweare.`？
+>如果不加空格，从自然语言角度，从人类视角看这句话`Whatwelovedeclarespubliclywhoexactlyweare.` 会是怎样的体验？
 >
 >换成：`ls-l/home/ykla/tmp`、`ls/` 呢？
 >
