--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -233,23 +233,23 @@ round-trip min/avg/max/stddev = 27.465/27.596/27.701/0.085 ms
 在 Linux 中，所有命令基本上都是来自 GNU 软件包的，Linux 内核没有任何命令。我们来验证这一点：
 
 ```bash
-ykla@ykla-virtual-machine:~$ dpkg -S /bin/mv 
+$ dpkg -S /bin/mv 
 coreutils: /bin/mv
-ykla@ykla-virtual-machine:~$ dpkg -S /bin/cp
+$ dpkg -S /bin/cp
 coreutils: /bin/cp
-ykla@ykla-virtual-machine:~$ dpkg -S /bin/ls
+$ dpkg -S /bin/ls
 coreutils: /bin/ls
-ykla@ykla-virtual-machine:~$ dpkg -S /bin/pwd
+$ dpkg -S /bin/pwd
 coreutils: /bin/pwd
-ykla@ykla-virtual-machine:~$ dpkg -S /bin/cat
+$ dpkg -S /bin/cat
 coreutils: /bin/cat
-ykla@ykla-virtual-machine:~$ dpkg -S /usr/sbin/chroot
+$ dpkg -S /usr/sbin/chroot
 coreutils: /usr/sbin/chroot
-ykla@ykla-virtual-machine:~$ dpkg -S /bin/kill
+$ dpkg -S /bin/kill
 procps: /bin/kill
-ykla@ykla-virtual-machine:~$ dpkg -S /usr/bin/free
+$ dpkg -S /usr/bin/free
 procps: /usr/bin/free
-ykla@ykla-virtual-machine:~$ dpkg -S /bin/su
+$ dpkg -S /bin/su
 util-linux: /bin/su
 ```
 
@@ -258,14 +258,14 @@ util-linux: /bin/su
 同时，shell 本身也内置了一些命令：
 
 ```bash
-ykla@ykla-virtual-machine:~$ type cd
+$ type cd
 cd 是 shell 内建
 ```
 
 列出所有 shell 内置的命令：
 
 ```bash
-ykla@ykla-virtual-machine:~$ compgen -b
+$ compgen -b
 .
 :
 [
