--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -24,8 +24,8 @@ login:
 ```sh
 FreeBSD/amd64 (ykla) (ttyv0)
 
-login:root # 此处输入用户名，然后按回车键
-password: # 此处输入密码，然后按回车键
+login: root # 此处输入用户名，然后按回车键
+Password: # 此处输入密码，然后按回车键
 Last login: Tue Mar 18 17:24:48 2025 from 3413e8b6b43f
 FreeBSD 15.0-CURRENT (GENERIC) main-n275981-b0375f78e32a
 
@@ -56,6 +56,28 @@ root@ykla:~ #
 >**注意**
 >
 >密码并不会被回显打印到屏幕上：一般我们输入密码时，屏幕上会显示 `******`。但是在 FreeBSD 中，凡是涉及密码的地方大都不会有任何显示，即使输入了密码屏幕上也是空白的，和没有任何输入是一个状态，就是什么也没有，输入后回车即可。
+
+### 故障排除
+
+- 若用户名正确，但密码不正确：
+  
+```sh
+login: root
+Password:
+Login: incorrect # 即不正确的意思
+login: 
+```
+
+- 若用户名和密码都不正确：
+
+```sh
+login: test # 当前系统中不存在该用户
+Password:
+Login: incorrect
+login: 
+```
+
+如果你连用户名都不知道，建议你找回 root 密码后看看系统中有哪些用户账户或者重装系统比较快。
 
 ### 参考文献
 
