--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -151,6 +151,89 @@ ls: invalid option -- z
 usage: ls [-ABCFGHILPRSTUWZabcdfghiklmnopqrstuvwxy1,] [--color=when] [-D format] [--group-directories=] [file ...]
 ```
 
+### thefuck
+
+#### 安装
+
+使用 pkg
+
+```sh
+# pkg ins thefuck
+```
+
+或者 ports
+
+```sh
+# cd /usr/ports/misc/thefuck/
+# make install clean
+```
+
+#### 配置
+
+查看安装后配置信息
+
+```sh
+root@ykla:~ # fuck
+Seems like fuck alias isn't configured!
+More details - https://github.com/nvbn/thefuck#manual-installation
+```
+
+我们打开网页浏览。发现要把 `eval $(thefuck --alias)` 加入到 `~/.bash_profile`、`~/.bashrc` 或 `~/.zshrc`。
+
+我们 FreeBSD 默认使用的是 sh，故将：
+
+```sh
+eval $(thefuck --alias) 
+```
+
+写入 `~/.shrc`，请勿使用 `>>` 重定向，请手动编辑加入。
+
+刷新环境变量：
+
+```sh
+root@ykla:~ # . ~/.shrc
+root@ykla:~ # fuck
+No fucks given
+```
+
+
+#### 测试使用 thefuck
+
+```
+root@ykla:~ # ls-l /home/ykla/ # 先输入一遍错误的试试
+-sh: ls-l: not found
+root@ykla:~ # fuck
+​​​​​​​​​​ls -l /home/ykla/ [enter/↑/↓/ctrl+c] # 上下箭头切换可能的命令，回车确认，ctrl c 中断​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+total 317
+……省略一部分……
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 下载
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 公共
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 图片
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 文档
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 桌面
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 模板
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 视频
+drwxr-xr-x  2 ykla ykla        2 Mar  9 20:45 音乐
+```
+
+再试试：
+
+```sh
+root@ykla:~ # plg install gimp
+-sh: plg: not found
+root@ykla:~ # fuck
+​​​​​​​​​​pkg install gimp [enter/↑/↓/ctrl+c]​​​​​​​​​​
+Updating FreeBSD repository catalogue...
+FreeBSD repository is up to date.
+Updating FreeBSD-base repository catalogue...
+Fetching data.pkg: 100%   50 KiB  51.7kB/s    00:01
+Processing entries: 100%
+FreeBSD-base repository update completed. 537 packages processed.
+All repositories are up to date.
+The following 36 package(s) will be affected (of 0 checked):
+……省略一部分……
+```
+
 ## 命令的执行与中断
 
 与 Windows 以及图形化界面的软件不同，绝大部分命令行程序在执行中是不会有任何进度提示的。通常只有以下两个结果：
