--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -151,7 +151,7 @@ ls: invalid option -- z
 usage: ls [-ABCFGHILPRSTUWZabcdfghiklmnopqrstuvwxy1,] [--color=when] [-D format] [--group-directories=] [file ...]
 ```
 
-### thefuck
+### thefuck：自动纠正错误拼写的命令
 
 #### 安装
 
