--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -178,7 +178,7 @@ Seems like fuck alias isn't configured!
 More details - https://github.com/nvbn/thefuck#manual-installation
 ```
 
-我们打开网页浏览。发现要把 `eval $(thefuck --alias)` 加入到 `~/.bash_profile`、`~/.bashrc` 或 `~/.zshrc`。
+我们打开网页浏览。发现要把 `eval $(thefuck --alias)` 加入到 `~/.bash_profile`（bash shell）、`~/.bashrc`（bash shell） 或 `~/.zshrc`（zsh shell）。
 
 我们 FreeBSD 默认使用的是 sh，故将：
 
