--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -186,6 +186,10 @@ More details - https://github.com/nvbn/thefuck#manual-installation
 eval $(thefuck --alias) 
 ```
 
+>**技巧**
+>
+>根据作者信息，若不喜欢输入 `fuck`，还可以使用其他别名：若更改为 `eval $(thefuck --alias abc)`，则下方所有 `fuck` 命令都会被换成 `abc`。
+
 写入 `~/.shrc`，请勿使用 `>>` 重定向，请手动编辑加入。
 
 刷新环境变量：
