--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -189,6 +189,16 @@ eval $(thefuck --alias)
 >**技巧**
 >
 >根据作者信息，若不喜欢输入 `fuck`，还可以使用其他别名：若更改为 `eval $(thefuck --alias abc)`，则下方所有 `fuck` 命令都会被换成 `abc`。
+>
+>```sh
+>root@ykla:~ # abc
+>Nothing found
+>root@ykla:~ # plg install gimp
+>-sh: plg: not found
+>root@ykla:~ # abc
+>​​​​​​​​​​pkg install gimp [enter/↑/↓/ctrl+c]​​​​​​​​​​
+>……省略一部分……
+>```
 
 写入 `~/.shrc`，请勿使用 `>>` 重定向，请手动编辑加入。
 
