--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -469,4 +469,118 @@ root@ykla:~ # pkg which /bin/ls
 如果缺少了哪个命令，一般可以通过安装相应的软件包来获取，比如 `lspci` 命令，来自软件包 `sysutils/pciutil`。但是也有很多命令存在 Linux 主义问题，不兼容其他操作系统，比如 ip 命令，来自 GNU 软件包 iproute2。
 
 
- 
+ ## 常见命令
+
+ ### 我是谁？
+
+- 查看当前登录系统的用户名：
+
+```sh
+ykla@ykla:~ $ whoami
+ykla
+```
+
+- 查看当前登录用户用户组相关
+
+```sh
+ykla@ykla:~ $ id
+uid=1001(ykla) gid=1001(ykla) groups=1001(ykla),0(wheel)
+```
+
+- 查看当前用户登录的中断及本次登录时间
+
+```sh
+ykla@ykla:~ $ who
+root             pts/0        Mar 19 15:00 (3413e8b6b43f)
+```
+
+- 展示当前有哪些用户已登录，并且他们在干什么
+
+```sh
+ykla@ykla:~ $ w
+ 3:02PM  up 21:52, 1 user, load averages: 0.01, 0.01, 0.00
+USER       TTY      FROM           LOGIN@  IDLE WHAT
+root       pts/0    3413e8b6b43f   3:00PM     - w
+```
+
+- 查看当前所在路径
+
+`pwd` 即 `print work directory`，打印工作目录
+
+```sh
+$ pwd
+/usr/ports/editors/vscode
+```
+
+### 创建、复制、移动、删除、查看目录
+
+#### `touch` 
+
+#### `mv` 移动命令
+
+`mv` 即英文 `move` 的缩写，即移动。
+
+---
+
+将文件 `test` 移动到 `/home/ykla`：
+
+```
+
+```
+
+#### `cp` 复制命令
+
+`cp` 即英文 `copy` 的缩写，意为复制。
+
+---
+
+将文件 `test` 复制到 `/home/ykla`
+
+```sh
+$ cp test /home/ykla/
+```
+
+末尾的 `/` 很重要，如果缺少了末尾的 `/`，且子目录 ykla 不存在的话， `test` 会被重命名为 `ykla`（ykla 在设想中本应是个目录）：
+
+```sh
+$ cp test /home/ykla/
+cp: directory /home/ykla does not exist # 若加上 /，会提示目录不存在
+```
+
+若缺少了末尾的 `/`：
+
+```sh
+$ cp -v test /home/ykla # -v 选项可以帮我们看到文件的变动，是 verbose 的缩写，即“啰嗦”一些，意为输出详细信息，
+test -> /home/ykla
+```
+
+---
+
+在复制文件的同时修改其文件名及后缀：
+
+```sh
+$ cp -v test /home/ykla/abc.TXT
+test -> /home/ykla/abc.TXT
+```
+
+该命令通常用于备份配置文件。
+
+---
+
+复制目录及子目录：
+
+```sh
+root@ykla:/ # cp -v /usr/ports/editors/vscode /home/ykla
+cp: /usr/ports/editors/vscode is a directory (not copied).
+```
+
+可见直接复制是不行的，提示是目录不是文件。
+
+我们需要选项 `-r`。`r` 是英文 `recursively`（递归）的意思：
+
+```sh
+root@ykla:/ # cp -vr /usr/ports/editors/vscode /home/ykla
+/usr/ports/editors/vscode -> /home/ykla/vscode
+/usr/ports/editors/vscode/distinfo -> /home/ykla/vscode/distinfo
+……省略一部分……
+```
