--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -289,8 +289,10 @@ Linux 中常见的 shell 一般是 bash。而 macOS 中的默认 shell 通常是
 
 ### 快捷键
 
-一般可以用 **Tab** 键补全命令。上箭头 **↑** 是查看上一条命令，下箭头 **↓** 是查看下一条命令。
+一般可以用 **Tab** 键补全命令或目录。上箭头 **↑** 是查看上一条命令，下箭头 **↓** 是查看下一条命令。
 
+- 补全命令
+  
 ```sh 
 root@ykla:~ # lo # 若此时按 TAB 键，输出如下。可以再输一个字母再按一次 TAB 键看看
 local                    localedef                login
@@ -300,6 +302,18 @@ local-unbound-checkconf  lockf                    look
 local-unbound-control    lockstat                 lorder
 local-unbound-setup      locktest                 lowntfs-3g
 locale
+```
+
+- 补全文件目录或文件名
+  
+```sh
+$ cp /home/ykla/ # 此处按 TAB 键，然后再重复按一次 TAB 键，看看效果
+$ cp /home/ykla/test/1.txt
+.cache/                 .login                  bin/                    test2
+.config/                .profile                HW_PROBE/               test3
+.cshrc                  .sh_history             mine
+.gitconfig              .sh_history.Y8RqIDNDIv  mydir/
+.k5login                .shrc
 ```
 
 若想终止命令，可以用 **ctrl**+**c**：
@@ -469,9 +483,7 @@ root@ykla:~ # pkg which /bin/ls
 如果缺少了哪个命令，一般可以通过安装相应的软件包来获取，比如 `lspci` 命令，来自软件包 `sysutils/pciutil`。但是也有很多命令存在 Linux 主义问题，不兼容其他操作系统，比如 ip 命令，来自 GNU 软件包 iproute2。
 
 
- ## 常见命令
-
- ### 我是谁？
+ ## 我是谁？
 
 - 查看当前登录系统的用户名：
 
@@ -512,11 +524,135 @@ $ pwd
 /usr/ports/editors/vscode
 ```
 
-### 创建、复制、移动、删除、查看目录
+## 创建、复制、移动、删除、查看目录
 
-#### `touch` 
+### `touch` 创建命令
 
-#### `mv` 移动命令
+`touch` 即触碰，意为轻微变动。
+
+创建一个文件，叫 `test`：
+
+```sh
+$ touch test
+```
+
+### `mkdir` 创建目录
+
+`mkdir` 即 `make directories`，创建目录
+
+创建一个目录，叫 ykla
+
+```sh
+$ mkdir -v ykla # -v 选项可以帮我们看到文件的变动，是 verbose 的缩写，即“啰嗦”一些，意为输出详细信息
+ykla
+```
+
+如果文件已存在
+
+```sh
+$ mkdir ykla
+mkdir: ykla: File exists # 提示已经有了该目录了！
+```
+
+---
+
+如果要创建目录 `ykla/ykla1/ykla2/ykla3` 呢？
+
+```sh
+$ mkdir ykla/ykla1/ykla2/ykla3
+mkdir: ykla/ykla1/ykla2: No such file or directory
+```
+
+报错如上，此时需要参数 `-p`，`p` 是英文 `parents`（父）的意思，即若上级目录不存在，则一并创建之。
+
+```sh
+$ mkdir -vp  ykla/ykla1/ykla2/ykla3
+ykla/ykla1
+ykla/ykla1/ykla2
+ykla/ykla1/ykla2/ykla3
+```
+
+### `rm` 删除命令
+
+>**警告**
+>
+>FreeBSD 命令行界面是没有回收站的，所有命令一经执行不可撤销。命令行操作 `rm` 是比较危险的。
+
+`rm` 即英文 `remove` 的缩写，即删除。
+
+---
+
+删除文件 `test`
+
+```sh
+$ rm test
+```
+
+若不存在一个叫 `test` 的文件：
+
+```
+root@ykla:/ # rm test
+rm: test: No such file or directory # 报错指定的文件或目录不存在
+```
+
+---  
+
+删除路径 `/home/ykla/test`
+
+- 若目录为空（不含任何文件，只是空目录）
+
+```sh
+$ rm /home/ykla/test
+$ 
+```
+
+还可以用命令 `rmdir `（remove directory，即删除目录，且只能删除空目录）：
+
+```sh
+$  rmdir /home/ykla/test
+$ 
+```
+
+- 若目录不为空
+
+```sh
+$ rm /home/ykla/test/
+rm: /home/ykla/test/: is a directory # 提示我们 /home/ykla/test/ 是个目录
+```
+
+使用参数 `-r`（recursively）递归、和参数 `-f`（force）强制删除：
+
+```sh
+$ rm -rf /home/ykla/test/
+```
+
+>**警告**
+>
+>使用 `rm -rf` 是相当危险的操作，是不可撤销的。试想，上述命令若 `/home/ykla/test/` 打错成了 `/home/ykla /test/`（多了个空格），会造成什么后果？
+>
+>```sh
+>root@ykla:~ # rm -rf /home/ykla /test
+>root@ykla:~ # ls /home/ykla
+>ls: /home/ykla: No such file or directory # 发现已经不存在 ykla 这个目录了
+>```
+
+>**警告**
+>
+>网上经常有人说使用 `sudo rm -rf /*` 是某某命令可以xxx，误导他人对系统造成不可挽回的灾难性破坏。该命令实质上是以 root 权限（~~还好 FreeBSD 默认没有 sudo~~），删除 `/` 及其子目录下的一切存在。让我来展示一下：
+>
+>root@ykla:/ # rm -rf /*
+>rm: /boot/efi: Device busy
+>rm: /boot: Directory not empty
+>rm: /dev/reroot: Operation not supported
+>rm: /dev/input: Operation not supported
+>rm: /dev/fd: Operation not supported
+>……省略一部分……
+>root@ykla:/ # 
+>```
+>
+>重启发现连引导都没了。
+
+### `mv` 移动命令
 
 `mv` 即英文 `move` 的缩写，即移动。
 
@@ -524,11 +660,14 @@ $ pwd
 
 将文件 `test` 移动到 `/home/ykla`：
 
+```sh
+root@ykla:/ # mv -v test /home/ykla # -v 选项可以帮我们看到文件的变动，是 verbose 的缩写，即“啰嗦”一些，意为输出详细信息
+test -> /home/ykla/test
 ```
 
-```
+将目录及子目录移动到 `/home/ykla`
 
-#### `cp` 复制命令
+### `cp` 复制命令
 
 `cp` 即英文 `copy` 的缩写，意为复制。
 
@@ -550,9 +689,13 @@ cp: directory /home/ykla does not exist # 若加上 /，会提示目录不存在
 若缺少了末尾的 `/`：
 
 ```sh
-$ cp -v test /home/ykla # -v 选项可以帮我们看到文件的变动，是 verbose 的缩写，即“啰嗦”一些，意为输出详细信息，
+$ cp -v test /home/ykla # -v 选项可以帮我们看到文件的变动，是 verbose 的缩写，即“啰嗦”一些，意为输出详细信息
 test -> /home/ykla
 ```
+
+>**思考题**
+>
+>其他命令有没有类似的问题？请你试一试。
 
 ---
 
