--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -137,6 +137,13 @@ drwxrwxrwt  2 root    wheel  2 Mar 18 17:10 .font-unix
 >
 >可以看到，shell 会将整个句子当成一个可执行的命令去执行。
 
+>**思考题**
+>
+>本文已经将日常所需的命令和选项都列出来了。
+>
+>一个命令的选项或参数可能有几十上百个，而字典或文档（man 也好 info 也罢）是用来查的不是用来背的。请记住这一点——“吾生也有涯，而知也无涯。以有涯随无涯，殆已”
+
+
 我们还需要知道，命令是不具有自动纠错功能的，哪怕只是打错了一个字母，少了一个数字，命令也绝不会执行成功：
 
 ```sh
@@ -524,7 +531,29 @@ $ pwd
 /usr/ports/editors/vscode
 ```
 
-## 创建、复制、移动、删除
+## 查看、创建、复制、移动、删除
+
+### `ls` 命令
+
+`ls` 命令的基本用法上面已经介绍过了，下面试着让 ls 以人类易读的方式列出文件大小：
+
+选项 `-h`，即 `human`（人类），须与 `-l`（`long` 长输出）结合使用。
+
+```sh
+$ ls -hl /home/ykla
+total 326 KB
+-rw-------  1 ykla ykla   50B Mar 18 17:23 .Xauthority
+drwx------  6 ykla ykla    6B Mar 10 16:21 .cache
+drwx------  9 ykla ykla   12B Mar 19 15:01 .config
+-rw-r--r--  1 ykla ykla  1.0K Feb 24 12:18 .shrc
+drwxr-xr-x  2 ykla ykla    2B Mar  9 23:48 .themes
+-rw-r--r--  1 root ykla    0B Mar 19 15:13 abc.TXT
+drwxr-xr-x  3 root ykla    7B Mar 19 15:17 vscode
+-rw-------  1 ykla ykla   17M Mar 18 17:09 xrdp-chansrv.core
+drwxr-xr-x  2 ykla ykla    2B Mar  9 20:45 下载
+……省略一部分……
+```
+
 
 ### `touch` 创建命令
 
