--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -535,7 +535,7 @@ $ pwd
 
 ### `ls` 命令
 
-`ls` 命令的基本用法上面已经介绍过了，下面试着让 ls 以人类易读的方式列出文件大小：
+`ls`（list，列出）命令的基本用法上面已经介绍过了，下面试着让 ls 以人类易读的方式列出文件大小：
 
 选项 `-h`，即 `human`（人类），须与 `-l`（`long` 长输出）结合使用。
 
