--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -137,6 +137,13 @@ drwxrwxrwt  2 root    wheel  2 Mar 18 17:10 .font-unix
 >
 >可以看到，shell 会将整个句子当成一个可执行的命令去执行。
 
+>**思考题**
+>
+>本文已经将日常所需的命令和选项都列出来了。
+>
+>一个命令的选项或参数可能有几十上百个，而字典或文档（man 也好 info 也罢）是用来查的不是用来背的。请记住这一点——“吾生也有涯，而知也无涯。以有涯随无涯，殆已”
+
+
 我们还需要知道，命令是不具有自动纠错功能的，哪怕只是打错了一个字母，少了一个数字，命令也绝不会执行成功：
 
 ```sh
@@ -289,8 +296,10 @@ Linux 中常见的 shell 一般是 bash。而 macOS 中的默认 shell 通常是
 
 ### 快捷键
 
-一般可以用 **Tab** 键补全命令。上箭头 **↑** 是查看上一条命令，下箭头 **↓** 是查看下一条命令。
+一般可以用 **Tab** 键补全命令或目录。上箭头 **↑** 是查看上一条命令，下箭头 **↓** 是查看下一条命令。
 
+- 补全命令
+  
 ```sh 
 root@ykla:~ # lo # 若此时按 TAB 键，输出如下。可以再输一个字母再按一次 TAB 键看看
 local                    localedef                login
@@ -300,6 +309,18 @@ local-unbound-checkconf  lockf                    look
 local-unbound-control    lockstat                 lorder
 local-unbound-setup      locktest                 lowntfs-3g
 locale
+```
+
+- 补全文件目录或文件名
+  
+```sh
+$ cp /home/ykla/ # 此处按 TAB 键，然后再重复按一次 TAB 键，看看效果
+$ cp /home/ykla/test/1.txt
+.cache/                 .login                  bin/                    test2
+.config/                .profile                HW_PROBE/               test3
+.cshrc                  .sh_history             mine
+.gitconfig              .sh_history.Y8RqIDNDIv  mydir/
+.k5login                .shrc
 ```
 
 若想终止命令，可以用 **ctrl**+**c**：
@@ -469,4 +490,311 @@ root@ykla:~ # pkg which /bin/ls
 如果缺少了哪个命令，一般可以通过安装相应的软件包来获取，比如 `lspci` 命令，来自软件包 `sysutils/pciutil`。但是也有很多命令存在 Linux 主义问题，不兼容其他操作系统，比如 ip 命令，来自 GNU 软件包 iproute2。
 
 
- 
+ ## 我是谁？
+
+- 查看当前登录系统的用户名：
+
+```sh
+ykla@ykla:~ $ whoami
+ykla
+```
+
+- 查看当前登录用户用户组相关
+
+```sh
+ykla@ykla:~ $ id
+uid=1001(ykla) gid=1001(ykla) groups=1001(ykla),0(wheel)
+```
+
+- 查看当前用户登录的中断及本次登录时间
+
+```sh
+ykla@ykla:~ $ who
+root             pts/0        Mar 19 15:00 (3413e8b6b43f)
+```
+
+- 展示当前有哪些用户已登录，并且他们在干什么
+
+```sh
+ykla@ykla:~ $ w
+ 3:02PM  up 21:52, 1 user, load averages: 0.01, 0.01, 0.00
+USER       TTY      FROM           LOGIN@  IDLE WHAT
+root       pts/0    3413e8b6b43f   3:00PM     - w
+```
+
+- 查看当前所在路径
+
+`pwd` 即 `print work directory`，打印工作目录
+
+```sh
+$ pwd
+/usr/ports/editors/vscode
+```
+
+## 查看、创建、复制、移动、删除
+
+### `ls` 命令
+
+`ls`（list，列出）命令的基本用法上面已经介绍过了，下面试着让 ls 以人类易读的方式列出文件大小：
+
+选项 `-h`，即 `human`（人类），须与 `-l`（`long` 长输出）结合使用。
+
+```sh
+$ ls -hl /home/ykla
+total 326 KB
+-rw-------  1 ykla ykla   50B Mar 18 17:23 .Xauthority
+drwx------  6 ykla ykla    6B Mar 10 16:21 .cache
+drwx------  9 ykla ykla   12B Mar 19 15:01 .config
+-rw-r--r--  1 ykla ykla  1.0K Feb 24 12:18 .shrc
+drwxr-xr-x  2 ykla ykla    2B Mar  9 23:48 .themes
+-rw-r--r--  1 root ykla    0B Mar 19 15:13 abc.TXT
+drwxr-xr-x  3 root ykla    7B Mar 19 15:17 vscode
+-rw-------  1 ykla ykla   17M Mar 18 17:09 xrdp-chansrv.core
+drwxr-xr-x  2 ykla ykla    2B Mar  9 20:45 下载
+……省略一部分……
+```
+
+
+### `touch` 创建命令
+
+`touch` 即触碰，意为轻微变动。
+
+创建一个文件，叫 `test`：
+
+```sh
+$ touch test
+```
+
+可以一次性使用多个参数创建多个文件（类似用法几乎是通用的，不再赘述）：
+
+```
+$ touch test test1 test2 test3
+```
+
+### `mkdir` 创建目录
+
+`mkdir` 即 `make directories`，创建目录
+
+创建一个目录，叫 ykla
+
+```sh
+$ mkdir -v ykla # -v 选项可以帮我们看到文件的变动，是 verbose 的缩写，即“啰嗦”一些，意为输出详细信息
+ykla
+```
+
+如果文件已存在
+
+```sh
+$ mkdir ykla
+mkdir: ykla: File exists # 提示已经有了该目录了！
+```
+
+---
+
+如果要创建目录 `ykla/ykla1/ykla2/ykla3` 呢？
+
+```sh
+$ mkdir ykla/ykla1/ykla2/ykla3
+mkdir: ykla/ykla1/ykla2: No such file or directory
+```
+
+报错如上，此时需要参数 `-p`，`p` 是英文 `parents`（父）的意思，即若上级目录不存在，则一并创建之。
+
+```sh
+$ mkdir -vp  ykla/ykla1/ykla2/ykla3
+ykla/ykla1
+ykla/ykla1/ykla2
+ykla/ykla1/ykla2/ykla3
+```
+
+### `rm` 删除命令
+
+>**警告**
+>
+>FreeBSD 命令行界面是没有回收站的，所有命令一经执行不可撤销。命令行操作 `rm` 是比较危险的。
+
+`rm` 即英文 `remove` 的缩写，即删除。
+
+---
+
+删除文件 `test`
+
+```sh
+$ rm test
+```
+
+若不存在一个叫 `test` 的文件：
+
+```
+root@ykla:/ # rm test
+rm: test: No such file or directory # 报错指定的文件或目录不存在
+```
+
+---  
+
+删除路径 `/home/ykla/test`
+
+- 若目录为空（不含任何文件，只是空目录）
+
+```sh
+$ rm /home/ykla/test
+$ 
+```
+
+还可以用命令 `rmdir `（remove directory，即删除目录，且只能删除空目录）：
+
+```sh
+$  rmdir /home/ykla/test
+$ 
+```
+
+- 若目录不为空
+
+```sh
+$ rm /home/ykla/test/
+rm: /home/ykla/test/: is a directory # 提示我们 /home/ykla/test/ 是个目录
+```
+
+使用参数 `-r`（recursively）递归、和参数 `-f`（force）强制删除：
+
+>**技巧**
+>
+>什么是递归？
+>
+>“从前有座山，山上有座庙，庙里有个老和尚在给小和尚讲故事。老和尚说：“从前有座山，山上有座庙……”这就是递归的实例。
+>
+>在该操作中，意为先进入 `/home/ykla/test/` 下的最深层的子目录（如有），删除其文件和子目录自身；然后向上重复操作。直至删除 `/home/ykla/test/`。即使用深度优先搜索算法（Depth-First-Search，DFS）。
+
+```sh
+$ rm -rf /home/ykla/test/
+```
+
+>**警告**
+>
+>使用 `rm -rf` 是相当危险的操作，是不可撤销的。试想，上述命令若 `/home/ykla/test/` 打错成了 `/home/ykla /test/`（多了个空格），会造成什么后果？
+>
+>```sh
+>root@ykla:~ # rm -rf /home/ykla /test
+>root@ykla:~ # ls /home/ykla
+>ls: /home/ykla: No such file or directory # 发现已经不存在 ykla 这个目录了
+>```
+
+>**警告**
+>
+>网上经常有人说使用 `sudo rm -rf /*` 是某某命令可以xxx，误导他人对系统造成不可挽回的灾难性破坏。该命令实质上是以 root 权限（~~还好 FreeBSD 默认没有 sudo~~），删除 `/` 及其子目录下的一切存在。让我来展示一下：
+>
+>root@ykla:/ # rm -rf /*
+>rm: /boot/efi: Device busy
+>rm: /boot: Directory not empty
+>rm: /dev/reroot: Operation not supported
+>rm: /dev/input: Operation not supported
+>rm: /dev/fd: Operation not supported
+>……省略一部分……
+>root@ykla:/ # 
+>```
+>
+>重启发现连引导都没了。
+
+### `mv` 移动命令
+
+`mv` 即英文 `move` 的缩写，即移动。
+
+---
+
+将文件 `test` 移动到 `/home/ykla`：
+
+```sh
+root@ykla:/ # mv -v test /home/ykla # -v 选项可以帮我们看到文件的变动，是 verbose 的缩写，即“啰嗦”一些，意为输出详细信息
+test -> /home/ykla/test
+```
+
+将目录及子目录移动到 `/home/ykla`
+
+### `cp` 复制命令
+
+`cp` 即英文 `copy` 的缩写，意为复制。
+
+---
+
+将文件 `test` 复制到 `/home/ykla`
+
+```sh
+$ cp test /home/ykla/
+```
+
+末尾的 `/` 很重要，如果缺少了末尾的 `/`，且子目录 ykla 不存在的话， `test` 会被重命名为 `ykla`（ykla 在设想中本应是个目录）：
+
+```sh
+$ cp test /home/ykla/
+cp: directory /home/ykla does not exist # 若加上 /，会提示目录不存在
+```
+
+若缺少了末尾的 `/`：
+
+```sh
+$ cp -v test /home/ykla # -v 选项可以帮我们看到文件的变动，是 verbose 的缩写，即“啰嗦”一些，意为输出详细信息
+test -> /home/ykla
+```
+
+>**思考题**
+>
+>其他命令有没有类似的问题？请你试一试。
+
+---
+
+在复制文件的同时修改其文件名及后缀：
+
+```sh
+$ cp -v test /home/ykla/abc.TXT
+test -> /home/ykla/abc.TXT
+```
+
+该命令通常用于备份配置文件。
+
+---
+
+复制目录及子目录：
+
+```sh
+root@ykla:/ # cp -v /usr/ports/editors/vscode /home/ykla
+cp: /usr/ports/editors/vscode is a directory (not copied).
+```
+
+可见直接复制是不行的，提示是目录不是文件。
+
+我们需要选项 `-r`。`r` 是英文 `recursively`（递归）的意思：
+
+```sh
+root@ykla:/ # cp -vr /usr/ports/editors/vscode /home/ykla
+/usr/ports/editors/vscode -> /home/ykla/vscode
+/usr/ports/editors/vscode/distinfo -> /home/ykla/vscode/distinfo
+……省略一部分……
+```
+
+### 正则表达式 `*`
+
+有时操作需要全选，可以使用正则 `*`。
+
+- 删除所有文件名以 `test` 打头的文件： 
+
+```sh
+$ rm test*
+root@ykla:~ # rm test*
+rm: test: is a directory
+rm: test4: is a directory
+```
+
+可以看到，不会处理目录。
+
+- 删除所有文件名以 `test` 打头的文件和**目录**： 
+
+```sh
+$ rm -rf test*
+```
+
+- 删除所有文件和**目录**： 
+
+```
+$ rm -rf *
+```
+
