--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -555,7 +555,7 @@ drwxr-xr-x  2 ykla ykla    2B Mar  9 20:45 下载
 ```
 
 
-### `touch` 创建命令
+### `touch` 创建文件命令
 
 `touch` 即触碰，意为轻微变动。
 
@@ -564,6 +564,17 @@ drwxr-xr-x  2 ykla ykla    2B Mar  9 20:45 下载
 ```sh
 $ touch test
 ```
+
+>**技巧**
+>
+>你可以看到我是创建了 `test`，而不是叫什么 `test.txt`、`test.word`、`test.pdf` 之类的。事实上，`.txt` 这部分我们称为后缀名，此部分主要是给人看的，并非机器。许多我们以为的清楚明白的事物真的如我们所认为的那般吗？
+>
+>即使我们去掉相应的后缀名，在类 UNIX 中也可以识别文件的类型，这是根据文件幻数（magic numbers）确定的：
+>
+>```sh
+>$ file book
+>book: PDF document, version 1.7
+>```
 
 可以一次性使用多个参数创建多个文件（类似用法几乎是通用的，不再赘述）：
 
@@ -695,7 +706,7 @@ $ rm -rf /home/ykla/test/
 >
 >重启发现连引导都没了。
 
-### `mv` 移动命令
+### `mv` 移动/重命名命令
 
 `mv` 即英文 `move` 的缩写，即移动。
 
@@ -709,6 +720,24 @@ test -> /home/ykla/test
 ```
 
 将目录及子目录移动到 `/home/ykla`
+
+---
+
+- 重命名
+
+将 `test5.pdf` 重命名为 `test5.txt`
+
+```sh
+$ mv -v  test5.pdf test5.txt
+test5.pdf -> test5.txt
+```
+
+将 `test2` 重命名为 `test2.pdf`
+
+```
+$ mv -v test2 test2.pdf 
+test2 -> test2.pdf
+```
 
 ### `cp` 复制命令
 
