--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -141,7 +141,9 @@ drwxrwxrwt  2 root    wheel  2 Mar 18 17:10 .font-unix
 >
 >本文已经将日常所需的命令和选项都列出来了。
 >
->一个命令的选项或参数可能有几十上百个，而字典或文档（man 也好 info 也罢）是用来查的不是用来背的。请记住这一点——“吾生也有涯，而知也无涯。以有涯随无涯，殆已”
+>一个命令的选项或参数可能有几十上百个，而字典或文档（man 也好 info 也罢）是用来查的不是用来背的。
+>
+>你怎么看“吾生也有涯，而知也无涯。以有涯随无涯，殆已”？
 
 
 我们还需要知道，命令是不具有自动纠错功能的，哪怕只是打错了一个字母，少了一个数字，命令也绝不会执行成功：
