--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -638,8 +638,8 @@ $ rm test
 
 若不存在一个叫 `test` 的文件：
 
-```
-root@ykla:/ # rm test
+```sh
+$ rm test
 rm: test: No such file or directory # 报错指定的文件或目录不存在
 ```
 
@@ -695,7 +695,7 @@ $ rm -rf /home/ykla/test/
 >**警告**
 >
 >网上经常有人说使用 `sudo rm -rf /*` 是某某命令可以xxx，误导他人对系统造成不可挽回的灾难性破坏。该命令实质上是以 root 权限（~~还好 FreeBSD 默认没有 sudo~~），删除 `/` 及其子目录下的一切存在。让我来展示一下：
->```
+>```sh
 >root@ykla:/ # rm -rf /*
 >rm: /boot/efi: Device busy
 >rm: /boot: Directory not empty
@@ -717,7 +717,7 @@ $ rm -rf /home/ykla/test/
 将文件 `test` 移动到 `/home/ykla`：
 
 ```sh
-root@ykla:/ # mv -v test /home/ykla # -v 选项可以帮我们看到文件的变动，是 verbose 的缩写，即“啰嗦”一些，意为输出详细信息
+$ mv -v test /home/ykla # -v 选项可以帮我们看到文件的变动，是 verbose 的缩写，即“啰嗦”一些，意为输出详细信息
 test -> /home/ykla/test
 ```
 
@@ -736,7 +736,7 @@ test5.pdf -> test5.txt
 
 将 `test2` 重命名为 `test2.pdf`
 
-```
+```sh
 $ mv -v test2 test2.pdf 
 test2 -> test2.pdf
 ```
@@ -787,7 +787,7 @@ test -> /home/ykla/abc.TXT
 复制目录及子目录：
 
 ```sh
-root@ykla:/ # cp -v /usr/ports/editors/vscode /home/ykla
+$ cp -v /usr/ports/editors/vscode /home/ykla
 cp: /usr/ports/editors/vscode is a directory (not copied).
 ```
 
@@ -796,7 +796,7 @@ cp: /usr/ports/editors/vscode is a directory (not copied).
 我们需要选项 `-r`。`r` 是英文 `recursively`（递归）的意思：
 
 ```sh
-root@ykla:/ # cp -vr /usr/ports/editors/vscode /home/ykla
+$ cp -vr /usr/ports/editors/vscode /home/ykla
 /usr/ports/editors/vscode -> /home/ykla/vscode
 /usr/ports/editors/vscode/distinfo -> /home/ykla/vscode/distinfo
 ……省略一部分……
@@ -810,7 +810,6 @@ root@ykla:/ # cp -vr /usr/ports/editors/vscode /home/ykla
 
 ```sh
 $ rm test*
-root@ykla:~ # rm test*
 rm: test: is a directory
 rm: test4: is a directory
 ```
@@ -825,7 +824,7 @@ $ rm -rf test*
 
 - 删除所有文件和**目录**： 
 
-```
+```sh
 $ rm -rf *
 ```
 
