--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -114,6 +114,7 @@ drwxrwxrwt  2 root    wheel  2 Mar 18 17:10 .XIM-unix
 drwxrwxrwt  2 root    wheel  2 Mar 18 17:10 .font-unix
 ```
 
+
 其中，`ls`（L 小写）意味着列出当下目录或指定目录下的文件；选项 `-l`（L 小写）意味着打印详细信息，输出长（*long*）的格式。
 
 现在，大部分命令均应遵从上面的方式（有所省略）。这是 [POSIX.1-2024](https://pubs.opengroup.org/onlinepubs/9799919799/) 规范所规定的。
@@ -556,6 +557,52 @@ drwxr-xr-x  2 ykla ykla    2B Mar  9 20:45 下载
 ……省略一部分……
 ```
 
+在 UNIX 系统中，以 `.` 开头的文件或目录（如上面的 `.XIM-unix`）都是隐藏的。你的安卓手机也是一样的——你可以通过 [MT 文件管理器](https://mt2.cn/)自行查看一下。
+
+而选项 `-a` 可以显示出来：
+
+```sh
+ykla@ykla:~ $ ls -a
+.		.cshrc		.login		.profile	公共		视频
+..		.dbus		.login_conf	.sh_history	图片		音乐
+.Xauthority	.face		.mail_aliases	.shrc		文档
+.cache		.icons		.mailrc		.themes		桌面
+.config		.local		.mozilla	下载		模板
+```
+
+>**思考题**
+>
+>ykla@ykla:~ $ pwd
+>/home/ykla
+>ykla@ykla:~ $ cd .
+>ykla@ykla:~ $ pwd
+>/home/ykla
+>ykla@ykla:~ $ cd ..
+>ykla@ykla:/home $ pwd
+>/home
+>ykla@ykla:/home $ cd ..
+>ykla@ykla:/ $ pwd
+>/
+>ykla@ykla:/ $ cd /home/ykla
+>ykla@ykla:~ $ cd ../..
+>ykla@ykla:/ $ pwd
+>/
+>```
+>
+>根据上面的输出，思考：上面的 `.`、`..` 分别代表什么？
+
+试试不加选项 `-a` 呢?
+
+```sh
+ykla@ykla:~ $ ls
+下载	公共	图片	文档	桌面	模板	视频	音乐
+```
+
+则不会显示隐藏文件。
+
+>**技巧**、
+>
+>请以普通用户进行测试，因为 FreeBSD 的 root shell 总是显示隐藏文件的。
 
 ### `touch` 创建文件命令
 
