--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -536,6 +536,18 @@ $ pwd
 
 ## 查看、创建、复制、移动、删除
 
+### `cd` 命令
+
+`cd`（change working directory，更改工作目录）
+
+切换到 `/home`
+
+```
+$ cd /home
+$ pwd # 看看现在在哪
+/home
+```
+
 ### `ls` 命令
 
 `ls`（list，列出）命令的基本用法上面已经介绍过了，下面试着让 ls 以人类易读的方式列出文件大小：
