--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -571,7 +571,7 @@ drwxr-xr-x  2 ykla ykla    2B Mar  9 20:45 下载
 
 在 UNIX 系统中，以 `.` 开头的文件或目录（如上面的 `.XIM-unix`）都是隐藏的。你的安卓手机也是一样的——你可以通过 [MT 文件管理器](https://mt2.cn/)自行查看一下。
 
-而选项 `-a` 可以显示出来：
+而选项 `-a` 可以显示出来隐藏的目录或文件：
 
 ```sh
 ykla@ykla:~ $ ls -a
