--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -557,7 +557,7 @@ $ pwd # 看看现在在哪
 选项 `-h`，即 `human`（人类），须与 `-l`（`long` 长输出）结合使用。
 
 ```sh
-$ ls -hl /home/ykla
+# ls -hl /home/ykla
 total 326 KB
 -rw-------  1 ykla ykla   50B Mar 18 17:23 .Xauthority
 drwx------  6 ykla ykla    6B Mar 10 16:21 .cache
