--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -57,7 +57,7 @@ root@ykla:~ #
 >
 >密码并不会被回显打印到屏幕上：一般我们输入密码时，屏幕上会显示 `******`。但是在 FreeBSD 中，凡是涉及密码的地方大都不会有任何显示，即使输入了密码屏幕上也是空白的，和没有任何输入是一个状态，就是什么也没有，输入后回车即可。
 
-①：root 是 UNIX 中的最高权限。我们常说的安卓 root，苹果越狱，kindle 越狱等等都是指获取这个 root 权限或同等权限。
+①：root 是 UNIX 中的最高权限。我们常说的安卓 root，苹果越狱，kindle 越狱等等都是为了获取这个 root 权限权限。
 
 ### 故障排除
 
