--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -885,12 +885,14 @@ rm: test4: is a directory
 - 删除所有文件名以 `test` 打头的文件和**目录**： 
 
 ```sh
+$ ls test*  # 确认匹配的文件
 $ rm -rf test*
 ```
 
 - 删除所有文件和**目录**： 
 
 ```sh
+$ ls *  # 确认匹配的文件
 $ rm -rf *
 ```
 
