--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -772,7 +772,9 @@ $ rm -rf /home/ykla/test/
 >
 >重启发现连引导都没了。
 >
->你是否对上面“root 是 UNIX 中的最高权限”这句话有了更深刻的体会？这是否说明了权利与义务的一致性？
+>>**思考题**
+>>
+>>你是否对上面“root 是 UNIX 中的最高权限”这句话有了更深刻的体会？这是否说明了权力和责任的一致性？
 
 ### `mv` 移动/重命名命令
 
