--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -774,7 +774,7 @@ $ rm -rf /home/ykla/test/
 >
 >>**思考题**
 >>
->>你是否对上面“root 是 UNIX 中的最高权限”这句话有了更深刻的体会？这是否说明了权力和责任的一致性？
+>>你是否对上面“root 是 UNIX 中的最高权限”这句话有了更深刻的体会？这是否说明了权力和责任的一致性？如果滥用权力，不仅会伤害他人，最后也会致使自己失去存在的现实性。
 
 ### `mv` 移动/重命名命令
 
