--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
@@ -1,14 +1,6 @@
 # 第 15.1 节 网络参数配置命令
 
-#### 系统设置工具 bsdconfig
-
-`# bsdconfig` 是 FreeBSD 基本系统提供的系统配置实用工具，是个 Shell 界面，本身也是由一组 shell 程序构成的。
-
-#### 安全的操作 rc 文件
-
-`# sysrc` 是 FreeBSD 提供的 rc 文件实用工具，可代替手动编辑 `rc.conf`。
-
-#### 作为网关服务器
+## 作为网关服务器
 
 打开 IP 转发功能：
 
@@ -25,25 +17,27 @@
 # sysrc firewall_nat_enable="YES"
 ```
 
-设置默认接受连接： `# ee /boot/loader.conf`
+设置默认接受连接： 
+
+编辑 `/boot/loader.conf`，写入：
 
 ```sh
 net.inet.ip.fw.default_to_accept=1
 ```
 
-#### 手动设置 resolv.conf
+## 手动设置 resolv.conf
 
 手动编辑 resolv.conf 后，重启系统又会被重置，因为 DHCP 会重写这个文件。
 
-防止 `resolvconf` 服务覆盖 resolv.conf：`# ee /etc/resolvconf.conf`
+防止 `resolvconf` 服务覆盖 resolv.conf：
 
-```sh
-resolv_conf="/dev/null"
-```
+编辑 `/etc/resolvconf.conf`，写入 `resolvconf=NO `
 
-再编辑 resolv.conf 就可以了。
+### 参考文献
 
-#### 查看网卡速率
+- [ 8.8.8.8 or 1.1.1.1 if set in etc resolv conf doesn't stay as an entry in the file after a network restart](https://forums.freebsd.org/threads/8-8-8-8-or-1-1-1-1-if-set-in-etc-resolv-conf-doesnt-stay-as-an-entry-in-the-file-after-a-network-restart.85951/)
+
+## 查看网卡速率
 
 每 2 秒刷新一次：
 
