--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
@@ -25,11 +25,11 @@
 net.inet.ip.fw.default_to_accept=1
 ```
 
-## 手动设置 resolv.conf
+## 手动设置 `resolv.conf`
 
-手动编辑 resolv.conf 后，重启系统又会被重置，因为 DHCP 会重写这个文件。
+手动编辑 `/etc/resolv.conf` 后，重启系统又会被重置，因为 DHCP 会重写这个文件。
 
-防止 `resolvconf` 服务覆盖 resolv.conf：
+防止 `resolvconf` 服务覆盖 `resolv.conf`：
 
 编辑 `/etc/resolvconf.conf`，写入 `resolvconf=NO `
 
